# toxindex-task-registry

./: .env  .gitattributes  .gitignore  README.md
sync/: datastore.py  default_workflows.json  load_postgres_env.sh  pyproject.toml  seed_workflows.py
sync/reference/: __init__.py  cache_manager.py  storage.py
tasks/affinity/: .dockerignore  .python-version  CLAUDE.md  README.md  README_DETERMINISM.md  pyproject.toml  setup_cuda_openmm.sh
tasks/affinity/affinity/: __init__.py  affinity_celery.py  affinity_test.py  affinity_utils.py  calculate_iterations.py  celery_worker_affinity.py  mmgbsa_utils.py  test_cache_setup.py  test_independence_results.csv  test_reproducibility_results.csv  test_symmetry_results.csv
tasks/affinity/affinity/debugging/: affinity_comparison.csv  affinity_test.py  quick_determinism_test.py  sample_affinity_comparison.csv  test_csv_output.py  test_full_workflow_determinism.py  test_independence_results.csv  test_iterations_convergence.py  test_pdbfixer_determinism.py  test_reproducibility_results.csv  test_symmetry_results.csv  ultra_quick_test.sh  verify_determinism_settings.py
tasks/affinity/affinity/debugging/sample_input/: experimental.csv  metadata.csv  metadata_var1.csv  metadata_var2.csv  metadata_var3.csv
tasks/affinity/affinity/sample_input/: experimental.csv  metadata.csv  metadata_var1.csv  metadata_var2.csv  metadata_var3.csv
tasks/affinity/deployment/: Dockerfile.affinity  deployment_affinity.yaml  deployment_affinity_cpu.yaml  flower_deployment.yaml  hpa_affinity.yaml  keda_scaledobject_affinity.yaml  keda_trigger_auth_affinity.yaml  prometheus_deployment.yaml
tasks/protopred/: README.md  pyproject.toml
tasks/protopred/deployment/: Dockerfile.protopred  deployment_protopred.yaml
tasks/protopred/original_script/: query_protopred_api_json.py
tasks/protopred/protopred/: __init__.py  celery_worker_protopred.py  protopred_celery.py
