[project]
name = "protopred-workflow"
version = "0.1.0"
description = "Workflow for querying ProtoPRED API for physical-chemical property predictions"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "requests>=2.31.0",
    "langchain-google-vertexai>=2.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["protopred"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

